# aegis

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
aegis/: config.py  db.py  logging.py  main.py  metrics.py  middleware.py  repository.py  schemas.py  security.py  service.py
aegis/api/: routes.py
aegis/engine/: anomaly.py  features.py  policy.py  rules.py  types.py
docs/: AUDIT.md
scripts/: simulate.py
static/: index.html
tests/: test_api.py  test_engine.py  test_security.py
