[project]
name = "aegis"
version = "0.1.0"
description = "Adaptive account-takeover & transaction-risk decisioning engine."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2",
  "pydantic-settings>=2",
  "SQLAlchemy>=2",
  "scikit-learn>=1.3",
  "numpy>=1.26",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses Depends() in defaults by design

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_any_generics = false
check_untyped_defs = true
warn_redundant_casts = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aegis"]
